Bug 472483 - The Calendar applet randomly displays holidays from the default region instead of the selected one
Summary: The Calendar applet randomly displays holidays from the default region instea...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 5.27.6
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-21 22:54 UTC by popov895
Modified: 2023-09-21 13:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2023-07-21 22:54:22 UTC
SUMMARY

The holiday calendar randomly shows the default calendar (United States in my case) instead of the one selected in the settings (the calendar that I selected before remains selected in the settings). After a while, it randomly backs to the selected calendar. Unfortunately, I don't see any pattern in this to suggest why this is happening. My UI is in American English, but the holiday calendar is different.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20230718
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Graphics Platform: X11
Comment 1 popov895 2023-08-28 20:33:49 UTC
The reason is very strange: after closing any instance of  `KFileDialog`, `KConfigWatcher` emits a `configChanged` signal, where the name of the `group` is "KFileDialog Settings", although there is no group with such a name in the given configuration file. Therefore, we need to check the name of the `group`in the handler of the `configChanged` signal.
Comment 2 Bug Janitor Service 2023-09-21 08:51:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3319
Comment 3 Fushan Wen 2023-09-21 09:26:59 UTC
Git commit 72444337c24dac114765ff28768bd55f7e5018c5 by Fushan Wen, on behalf of Eugene Popov.
Committed on 21/09/2023 at 11:26.
Pushed by fusionfuture into branch 'master'.

[plasmacalendarintegration] Fix selected regions are randomly reset to default

Check whether we are reading the selected regions from the group we need.
FIXED-IN: 5.27.9

M  +9    -9    plasmacalendarintegration/holidaysevents.cpp
M  +0    -1    plasmacalendarintegration/holidaysevents.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/72444337c24dac114765ff28768bd55f7e5018c5
Comment 4 Fushan Wen 2023-09-21 13:17:48 UTC
Git commit 51dcf82db5990dde9cf3e6b3132dfff2c129bee5 by Fushan Wen, on behalf of Eugene Popov.
Committed on 21/09/2023 at 12:31.
Pushed by fusionfuture into branch 'Plasma/5.27'.

[plasmacalendarintegration] Fix selected regions are randomly reset to default

Check whether we are reading the selected regions from the group we need.
FIXED-IN: 5.27.9

(cherry picked from commit 72444337c24dac114765ff28768bd55f7e5018c5)

M  +9    -10   plasmacalendarintegration/holidaysevents.cpp
M  +0    -1    plasmacalendarintegration/holidaysevents.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/51dcf82db5990dde9cf3e6b3132dfff2c129bee5