[plasmacalendarintegration] Fix selected regions are randomly reset to default

Check whether we are reading the selected regions from the group we need.

BUG: 472483
FIXED-IN: 5.27.9