plasmacalendarintegration/holidaysevents.h
@@ -33,6 +33,5 @@ private:
     QList<KHolidays::HolidayRegion *> m_regions;
     QMultiHash<QDate, CalendarEvents::EventData> m_lastData;
     QHash<QDate, CalendarEvents::CalendarEventsPlugin::SubLabel> m_lastSubLabelData;
-    KSharedConfig::Ptr m_config;
     KConfigWatcher::Ptr m_configWatcher;
 };
